--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -3,5 +3,23 @@ html,body{
     padding:0;
     width:100%;
     height:100%;
-    background: url("../images/login_bg.jpg");
+    background: url("../images/login_bg.jpg") no-repeat center;
+    background-size:cover;
+}
+.loginAndRegBox{
+	width: 400px;
+	height: 310px;
+	background-color: #fff;
+	position: absolute;
+	left: 50%;
+	top:50%;
+	/* 往回来自身的百分之五十 */
+	transform: translate(-50%,-50%);
+}
+.title-box{
+	height: 60px;
+	background: url("../images/login_title.png") no-repeat center;
+}
+.reg-box{
+	display: none;
 }
