登陆注册完成

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -23,3 +23,20 @@ html,body{
 .reg-box{
 	display: none;
 }
+.layui-form{
+	padding: 0 30px;
+}
+.link{
+	display: flex;
+	justify-content: flex-end;
+}
+.layui-form-item{
+	position: relative;
+}
+.layui-icon{
+	position: absolute;
+	top: 10px;
+	left: 10px;
+}
+
+
